--- a/manifests/neapolitanMinion-template.yaml
+++ b/manifests/neapolitanMinion-template.yaml
@@ -18,3 +18,5 @@ mapping:
   eventHandlers:
     - event: "ProposeAction(indexed bytes32,indexed uint256,uint256,address,uint256,bytes)"
       handler: handleProposeAction
+    - event: "ExecuteAction(indexed bytes32,indexed uint256,uint256,address,uint256,bytes,address)"
+      handler: handleExecuteAction
