--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -410,3 +410,7 @@ templates:
             ProposeAction(indexed bytes32,indexed
             uint256,uint256,address,uint256,bytes)
           handler: handleProposeAction
+        - event: >-
+            ExecuteAction(indexed bytes32,indexed
+            uint256,uint256,address,uint256,bytes,address)
+          handler: handleExecuteAction
