--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,11 +6,11 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: V1Factory
-    network: kovan
+    network: rinkeby
     source:
-      address: '0x0C60Cd59f42093c7489BA68BAA4d7A01f2468153'
+      address: '0x610247467d0dfA8B477ad7Dd1644e86CB2a79F8F'
       abi: V1Factory
-      startBlock: 14980875
+      startBlock: 6494343
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -34,11 +34,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V2Factory
-    network: kovan
+    network: rinkeby
     source:
-      address: '0xB47778d3BcCBf5e39dEC075CA5F185fc20567b1e'
+      address: '0x763b61A62EF076ad960E1d513713B2aeD7C1b88e'
       abi: V2Factory
-      startBlock: 16845360
+      startBlock: 6494329
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -62,11 +62,11 @@ dataSources:
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
     name: V21Factory
-    network: kovan
+    network: rinkeby
     source:
-      address: '0x9c5d087f912e7187D9c75e90999b03FB31Ee17f5'
+      address: '0xC33a4EfecB11D2cAD8E7d8d2a6b5E7FEacCC521d'
       abi: V21Factory
-      startBlock: 22640938
+      startBlock: 7771115
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -89,12 +89,38 @@ dataSources:
           handler: handleRegisterV21
       file: ./src/factory-mapping.ts
   - kind: ethereum/contract
-    name: MinionFactory
-    network: kovan
+    name: V22Factory
+    network: rinkeby
     source:
-      address: '0x80ec2dB292E7a6D1D5bECB80e6479b2bE048AC98'
+      address: '0xa24012Bcfc53b3C5c448726d99B68044cdADD77A'
+      abi: V22Factory
+      startBlock: 9901589
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Register
+      abis:
+        - name: V22Factory
+          file: ./abis/V22Factory.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SummonComplete(indexed
+            address,address,address,address[],uint256,uint256,uint256,uint256,uint256,uint256,uint256)
+          handler: handleSummonV22
+      file: ./src/v22-factory-mapping.ts
+  - kind: ethereum/contract
+    name: MinionFactory
+    network: rinkeby
+    source:
+      address: '0x316eFCd421b0654B7aE8E806880D4AE88ecaE206'
       abi: MinionFactory
-      startBlock: 22640617
+      startBlock: 7737496
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -115,11 +141,11 @@ dataSources:
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
     name: V2MinionFactory
-    network: kovan
+    network: rinkeby
     source:
-      address: '0xCE63803E265617c55567a7A7b584fF2dbD76210B'
+      address: '0x313F02A44089150C9ff7011D4e87b52404A914A9'
       abi: MinionFactory
-      startBlock: 24234494
+      startBlock: 8402027
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -139,58 +165,33 @@ dataSources:
           handler: handleSummonedV2Minion
       file: ./src/minion-factory-mapping.ts
   - kind: ethereum/contract
-    name: UberMinionFactory
-    network: kovan
+    name: SuperfluidMinionFactory
+    network: rinkeby
     source:
-      address: '0x03042577463E3820F9cA6Ca3906BAad599ba9382'
-      abi: UberMinionFactory
-      startBlock: 23861045
+      address: '0x4b168c1a1E729F4c8e3ae81d09F02d350fc905ca'
+      abi: SuperfluidMinionFactory
+      startBlock: 8541482
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
         - Moloch
-        - Minion
+        - SuperfluidMinion
       abis:
-        - name: UberMinionFactory
-          file: ./abis/UberMinionFactory.json
+        - name: SuperfluidMinionFactory
+          file: ./abis/SuperfluidMinionFactory.json
       eventHandlers:
-        - event: >-
-            SummonUberMinion(indexed address,indexed
-            address,address,address,address,uint256,uint256,string,string)
-          handler: handleSummonedUberMinion
-      file: ./src/uberhaus-minion-factory-mapping.ts
-  - kind: ethereum/contract
-    name: SafeMinionFactory
-    network: kovan
-    source:
-      address: '0xA1b97D22e22507498B350A9edeA85c44bA7DBC01'
-      abi: SafeMinionFactory
-      startBlock: 27138866
-    mapping:
-      kind: ethereum/events
-      apiVersion: 0.0.5
-      language: wasm/assemblyscript
-      entities:
-        - Moloch
-        - Minion
-      abis:
-        - name: SafeMinionFactory
-          file: ./abis/SafeMinionFactory.json
-      eventHandlers:
-        - event: >-
-            SummonMinion(indexed address,indexed address,indexed
-            address,string,string,uint256)
-          handler: handleSummonedSafeMinion
-      file: ./src/safe-minion-factory-mapping.ts
+        - event: 'SummonMinion(indexed address,indexed address,string,string)'
+          handler: handleSummonedSuperfluidMinion
+      file: ./src/superfluid-minion-factory-mapping.ts
   - kind: ethereum/contract
     name: EscrowMinion
-    network: kovan
+    network: rinkeby
     source:
-      address: '0xc9f9E7FC92A7D3B2b3554be850fFF462B7b382E7'
+      address: '0xEB28321b7952CC34bFb734413b58496A889C9660'
       abi: EscrowMinion
-      startBlock: 27734158
+      startBlock: 9471294
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
@@ -208,10 +209,33 @@ dataSources:
         - event: 'ExecuteAction(uint256,address,address)'
           handler: handleExecuteAction
       file: ./src/escrow-minion-mapping.ts
+  - kind: ethereum/contract
+    name: SafeMinionFactory
+    network: rinkeby
+    source:
+      address: '0x3f13ABc8931c0e381Ce6d1Be9f978aE6E9d99Cb8'
+      abi: SafeMinionFactory
+      startBlock: 9269583
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      entities:
+        - Moloch
+        - Minion
+      abis:
+        - name: SafeMinionFactory
+          file: ./abis/SafeMinionFactory.json
+      eventHandlers:
+        - event: >-
+            SummonMinion(indexed address,indexed address,indexed
+            address,string,string,uint256)
+          handler: handleSummonedSafeMinion
+      file: ./src/safe-minion-factory-mapping.ts
 templates:
   - kind: ethereum/contract
     name: MolochV1Template
-    network: kovan
+    network: rinkeby
     source:
       abi: V1Moloch
     mapping:
@@ -255,7 +279,7 @@ templates:
           handler: handleUpdateDelegateKey
   - kind: ethereum/contract
     name: MolochV2Template
-    network: kovan
+    network: rinkeby
     source:
       abi: V2Moloch
     mapping:
@@ -314,7 +338,7 @@ templates:
           handler: handleTokensCollected
   - kind: ethereum/contract
     name: MolochV21Template
-    network: kovan
+    network: rinkeby
     source:
       abi: V21Moloch
     mapping:
@@ -367,34 +391,95 @@ templates:
         - event: 'TokensCollected(indexed address,uint256)'
           handler: handleTokensCollected
   - kind: ethereum/contract
-    name: UberhausMinionTemplate
-    network: kovan
+    name: MolochV22Template
+    network: rinkeby
     source:
-      abi: UberhausMinion
+      abi: V22Moloch
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
-      file: ./src/uberhaus-minion-mapping.ts
+      file: ./src/v2-mapping.ts
+      entities:
+        - Moloch
+        - TokenBalance
+        - Token
+        - Member
+        - Vote
+        - Proposal
+        - Shaman
+      abis:
+        - name: V22Moloch
+          file: ./abis/V22Moloch.json
+        - name: Erc20
+          file: ./abis/Erc20.json
+        - name: Erc20Bytes32
+          file: ./abis/Erc20Bytes32.json
+      eventHandlers:
+        - event: >-
+            SubmitProposal(indexed
+            address,uint256,uint256,uint256,address,uint256,address,string,bool[6],uint256,indexed
+            address,indexed address)
+          handler: handleSubmitProposal
+        - event: >-
+            SubmitVote(uint256,indexed uint256,indexed address,indexed
+            address,uint8)
+          handler: handleSubmitVote
+        - event: >-
+            SponsorProposal(indexed address,indexed
+            address,uint256,uint256,uint256)
+          handler: handleSponsorProposal
+        - event: 'ProcessProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessProposal
+        - event: 'ProcessGuildKickProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessGuildKickProposal
+        - event: 'ProcessWhitelistProposal(indexed uint256,indexed uint256,bool)'
+          handler: handleProcessWhitelistProposal
+        - event: 'UpdateDelegateKey(indexed address,address)'
+          handler: handleUpdateDelegateKey
+        - event: 'CancelProposal(indexed uint256,address)'
+          handler: handleCancelProposal
+        - event: 'Withdraw(indexed address,address,uint256)'
+          handler: handleWithdraw
+        - event: 'Ragequit(indexed address,uint256,uint256)'
+          handler: handleRagequit
+        - event: 'TokensCollected(indexed address,uint256)'
+          handler: handleTokensCollected
+        - event: 'SetSpamPrevention(address,uint256)'
+          handler: handleSpamPrevention
+        - event: 'SetShaman(indexed address,bool)'
+          handler: handleSetShaman
+        - event: 'Shaman(indexed address,uint256,uint256,bool)'
+          handler: handleShaman
+  - kind: ethereum/contract
+    name: SuperfluidMinionTemplate
+    network: rinkeby
+    source:
+      abi: SuperfluidMinion
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.5
+      language: wasm/assemblyscript
+      file: ./src/superfluid-minion-mapping.ts
       entities:
         - Moloch
         - Minion
         - Proposal
       abis:
-        - name: UberhausMinion
-          file: ./abis/UberhausMinion.json
+        - name: SuperfluidMinion
+          file: ./abis/SuperfluidMinion.json
       eventHandlers:
-        - event: SetUberHaus(address)
-          handler: handleSetUberHaus
-        - event: 'DelegateAppointed(uint256,address,address)'
-          handler: handleDelegateAppointed
-        - event: 'Impeachment(address,address)'
-          handler: handleImpeachment
-        - event: 'ExecuteAction(uint256,address)'
-          handler: handleExecuteAction
+        - event: 'ProposeStream(uint256,address)'
+          handler: handleProposedStream
+        - event: 'ExecuteStream(uint256,address)'
+          handler: handleExecutedStream
+        - event: 'StreamCanceled(uint256,address)'
+          handler: handleStreamCanceled
+        - event: ActionCanceled(uint256)
+          handler: handleStreamProposalCanceled
   - kind: ethereum/contract
     name: SafeMinionTemplate
-    network: kovan
+    network: rinkeby
     source:
       abi: SafeMinion
     mapping:
